# perspecta

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.bat  start.sh
backend/: Dockerfile  alembic.ini  init_db.py  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: __init__.py  workflow.py
backend/app/agents/nodes/: angle_planner_node.py  citation_verifier_node.py  content_generation.py  draft_generator_node.py  export_node.py  hot_topic_node.py  human_review_node.py  knowledge_retriever_node.py  perspective_discovery_node.py  retrieval_and_perspective.py  style_adapter_node.py  topic_filter_node.py
backend/app/agents/state/: workflow_state.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: drafts.py  (+4 more)
backend/app/core/: config.py  exceptions.py
backend/app/db/: __init__.py  session.py
backend/app/evaluation/: __init__.py  rag_evaluator.py
backend/app/generation/: __init__.py
backend/app/llm/: __init__.py  base.py  factory.py  providers.py
backend/app/models/: __init__.py  agent_run.py  citation.py  document.py  draft.py  hot_topic.py  perspective.py  style_profile.py  user.py  workflow_run.py
backend/app/observability/: __init__.py  logger.py  tracer.py
backend/app/retrieval/: __init__.py  chunker.py  document_parser.py  embedder.py  perspective_extractor.py  retriever.py  vector_store.py
backend/app/schemas/: __init__.py  document.py  draft.py  hot_topic.py  perspective.py  workflow.py
backend/app/services/: document_service.py  prompt_loader.py  workflow_service.py
(+31 files in other folders)
